@@ -271,4 +271,7 @@
   <data name="resetC" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\resetC.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ultima-online" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ultima-online.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
